feat: implement panache repositories and resource endpoints for physical assets, goals, vital readings, doctor visits, and inventory items.